
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint8_t ;
struct TYPE_4__ {int uuid16; int uuid32; int* uuid128; } ;
struct TYPE_5__ {int len; TYPE_1__ uuid; } ;
typedef TYPE_2__ esp_bt_uuid_t ;


 int sprintf (char*,char*,int,...) ;

__attribute__((used)) static char *uuid2str(esp_bt_uuid_t *uuid, char *str, size_t size)
{
    if (uuid == ((void*)0) || str == ((void*)0)) {
        return ((void*)0);
    }

    if (uuid->len == 2 && size >= 5) {
        sprintf(str, "%04x", uuid->uuid.uuid16);
    } else if (uuid->len == 4 && size >= 9) {
        sprintf(str, "%08x", uuid->uuid.uuid32);
    } else if (uuid->len == 16 && size >= 37) {
        uint8_t *p = uuid->uuid.uuid128;
        sprintf(str, "%02x%02x%02x%02x-%02x%02x-%02x%02x-%02x%02x-%02x%02x%02x%02x%02x%02x",
                p[15], p[14], p[13], p[12], p[11], p[10], p[9], p[8],
                p[7], p[6], p[5], p[4], p[3], p[2], p[1], p[0]);
    } else {
        return ((void*)0);
    }

    return str;
}
